# riptide_navigation

./: CMakeLists.txt  package.xml
include/riptide_navigation/: Constraint.hpp  orientation_controller.hpp  orthogonal_controller.hpp  stable_cycles.hpp
scripts/: 001-1s_1m.py  002-dolphin.py  003-2m_1m_2m.py  004-2m_fc.py  004-2m_fc_sim.py  005-angular_velocity.py  006-cycles.py  007-R.py  008-cap.py  010-immersion.py  011-immersion_cap.py  012-depth_cap.py  013-depth_dolphin.py  pymavlink_bridge.py
src/: orientation_controller.cpp  orthogonal_controller.cpp  stable_cycles.cpp  state_machine.cpp
